# marco

./: .env.example  .gitignore  IMPLEMENTATION.md  LLAMACPP_GUIDE.md  Makefile  OLLAMA_GUIDE.md  PROJECT_SUMMARY.txt  PROVIDERS.md  QUICKSTART.md  README.md  UV_GUIDE.md  examples.py  langgraph.json  pyproject.toml  validate.py
data/: nutrients.json  seasonal_ingredients.json
src/marco/: __init__.py  __main__.py  cli.py  config.py  conversation.py  db.py  graph.py  pdf.py  recipe_iterator.py  schemas.py
src/marco/agents/: __init__.py  chef_collaborative.py  conversation_summary.py  psychonutrition.py  psychonutrition_collaborative.py  recipe_generator.py  recipe_improvement.py  seasonal.py  seasonal_collaborative.py
templates/: recipe.html  style.css
